// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content-type export command filterContentTypesByUri should throw an error for uris which do not exist in the list of content types 1`] = `
"The following schema ID(s) could not be found: ['content-type-uri-4'].
Nothing was exported, exiting."
`;

exports[`content-type export command getExports should return a list of content-types to export and a list of filenames that will be updated 1`] = `
Array [
  Array [
    Object {
      "contentTypeUri": "content-type-uri-1",
      "settings": Object {
        "label": "content type 1",
      },
    },
    "export-dir",
    Object {
      "export-dir/export-filename-1.json": Object {
        "contentTypeUri": "content-type-uri-1",
        "settings": Object {
          "label": "content type 1",
        },
      },
      "export-dir/export-filename-2.json": Object {
        "contentTypeUri": "content-type-uri-2",
        "settings": Object {
          "label": "content type 2",
        },
      },
    },
    undefined,
  ],
  Array [
    Object {
      "contentTypeUri": "content-type-uri-2",
      "settings": Object {
        "label": "content type 2",
      },
    },
    "export-dir",
    Object {
      "export-dir/export-filename-1.json": Object {
        "contentTypeUri": "content-type-uri-1",
        "settings": Object {
          "label": "content type 1",
        },
      },
      "export-dir/export-filename-2.json": Object {
        "contentTypeUri": "content-type-uri-2",
        "settings": Object {
          "label": "content type 2",
        },
      },
    },
    undefined,
  ],
]
`;

exports[`content-type export command getExports should return a list of content-types to export and a list of filenames that will be updated 2`] = `
Array [
  Object {
    "contentType": Object {
      "contentTypeUri": "content-type-uri-1",
      "settings": Object {
        "label": "content type 1",
      },
    },
    "filename": "export-dir/export-filename-1.json",
    "status": "CREATED",
  },
  Object {
    "contentType": Object {
      "contentTypeUri": "content-type-uri-2",
      "settings": Object {
        "label": "content type 2",
      },
    },
    "filename": "export-dir/export-filename-2.json",
    "status": "UPDATED",
  },
]
`;

exports[`content-type export command getExports should return a list of content-types to export and a list of filenames that will be updated 3`] = `
Array [
  Object {
    "filename": "export-dir/export-filename-2.json",
    "uri": "content-type-uri-2",
  },
]
`;

exports[`content-type export command getExports should return a list of content-types to export and no filenames that will be updated (first export) 1`] = `
Array [
  Array [
    Object {
      "contentTypeUri": "content-type-uri-1",
      "settings": Object {
        "label": "content type 1",
      },
    },
    "export-dir",
    Object {},
    Array [
      Object {
        "contentTypes": Array [
          Object {
            "contentTypeUri": "content-type-uri-1",
            "hubContentTypeId": "1",
          },
        ],
        "name": "repo1",
      },
    ],
  ],
  Array [
    Object {
      "contentTypeUri": "content-type-uri-2",
      "settings": Object {
        "label": "content type 2",
      },
    },
    "export-dir",
    Object {},
    Array [
      Object {
        "contentTypes": Array [
          Object {
            "contentTypeUri": "content-type-uri-1",
            "hubContentTypeId": "1",
          },
        ],
        "name": "repo1",
      },
    ],
  ],
]
`;

exports[`content-type export command getExports should return a list of content-types to export and no filenames that will be updated (first export) 2`] = `
Array [
  Object {
    "contentType": Object {
      "contentTypeUri": "content-type-uri-1",
      "id": "1",
      "repositories": Array [
        "repo1",
      ],
      "settings": Object {
        "label": "content type 1",
      },
    },
    "filename": "export-dir/export-filename-1.json",
    "status": "CREATED",
  },
  Object {
    "contentType": Object {
      "contentTypeUri": "content-type-uri-2",
      "settings": Object {
        "label": "content type 2",
      },
    },
    "filename": "export-dir/export-filename-2.json",
    "status": "CREATED",
  },
]
`;

exports[`content-type export command getReposNamesForContentType should return names of repos to which content type is assigned 1`] = `
Array [
  "repo2",
]
`;

exports[`content-type export command processContentTypes should output a message if no content types to export from hub 1`] = `
Array [
  Array [
    "No content types to export from this hub, exiting.
",
  ],
]
`;
